--- a/tiatoolbox/data/pretrained_model.yaml
+++ b/tiatoolbox/data/pretrained_model.yaml
@@ -746,3 +746,41 @@ micronet-consep:
             patch_output_shape: [252, 252]
             stride_shape: [150, 150]
             save_resolution: {'units': 'mpp', 'resolution': 0.25}
+
+nuclick_original-pannuke:
+    url: https://tiatoolbox.dcs.warwick.ac.uk/models/seg/nuclick_original-pannuke.pth
+    architecture:
+        class: nuclick.NuClick
+        kwargs:
+            num_input_channels: 5
+            num_output_channels: 1
+    ioconfig:
+        class: semantic_segmentor.IOSegmentorConfig
+        kwargs:
+            input_resolutions:
+                - {'units': 'mpp', 'resolution': 0.25}
+            output_resolutions:
+                - {'units': 'mpp', 'resolution': 0.25}
+            patch_input_shape: [128, 128]
+            patch_output_shape: [128, 128]
+            save_resolution: {'units': 'mpp', 'resolution': 0.25}
+
+nuclick_unet-pannuke:
+    url: https://tiatoolbox.dcs.warwick.ac.uk/models/seg/nuclick_unet-pannuke.pth
+    architecture:
+        class: unet.UNetModel
+        kwargs:
+            num_input_channels: 5
+            num_output_channels: 2
+            encoder: [32, 64, 128, 256]
+            decoder_block: [3, 3]
+    ioconfig:
+        class: semantic_segmentor.IOSegmentorConfig
+        kwargs:
+            input_resolutions:
+                - {'units': 'mpp', 'resolution': 0.25}
+            output_resolutions:
+                - {'units': 'mpp', 'resolution': 0.25}
+            patch_input_shape: [128, 128]
+            patch_output_shape: [128, 128]
+            save_resolution: {'units': 'mpp', 'resolution': 0.25}
